--- a/lib/Resources/translations/bundle.en_US.po
+++ b/lib/Resources/translations/bundle.en_US.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Language: en_GB\n"
+"Language: en_US\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #: @AgitTriggerBundle/Resources/views/Include/template.handler.html.twig:34
